2005-10-07  Kevin Stafford  <kevinrs@us.ibm.com>

        * tapset/system_calls.stp: All 281 syscalls *prototyped*. They
	are still untested. Many of the aliases useability are contin-
 	gent upon resolution of namely: bz #1295 & bz #1382. 

2005-10-06  Frank Ch. Eigler  <fche@elastic.org>

	* stap.1.in: Document -b/-s options.
	* main.cxx (usage): Clarify -b/-s blurbs.
	* translator.cxx (translate_pass): Handle bulk_mode here instead.

2005-10-06  Frank Ch. Eigler  <fche@elastic.org>

	PR 1332.
	* translate.cxx (emit_symbol_data): New function to transcribe
	a processed address->symbol lookup table, based upon /proc/kallsyms.

2005-10-05  Tom Zanussi  <zanussi@us.ibm.com>

	* buildrun.cxx (run_pass): Add bulk/buffer_size flags to flags
	passed to stpd.
	* elaborate.h (systemtap_session): Add bulk/buffer_size flags.
	* main.cxx (usage,main): Add -b (bulk), -s (buffer_size) options.
	processing.

2005-10-04  Graydon Hoare  <graydon@redhat.com>

	PR 1131.
	* tapsets.cxx
	(target_variable_flavour_calculating_visitor::visit_target_symbol)
	(var_expanding_copy_visitor::visit_target_symbol): 
	Require guru mode for writing to target vars.
	* testsuite/buildok/twenty.stp: Test writing to target vars.

2005-10-01  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (get_module_dwarf): Add "required" parameter, which
	throws an exception if debuginfo is not found.
	(focus_on_module_containing_global_address): Tolerate miss.
	(query_kernel_exists): New function to test for "kernel" module in
	dwfl_getmodules() result set.
	(dwarf_builder::build): Call it if appropriate.

2005-09-30  Graydon Hoare  <graydon@redhat.com>

	PR 1131.
	* tapsets.cxx (dwflpp::find_variable_and_frame_base)
	(dwflpp::translate_components)
	(dwflpp::resolve_unqualified_inner_typedie)
	(dwflpp::translate_final_fetch_or_store): New functions.
	(dwflpp::literal_stmt_for_local): Factor a bit.
	(variable_flavour_calculating_visitor::visit_target_symbol): 