@@ -1,4 +1,4 @@
-#! stap -p2
+#! stap -p1
 
 function zoo () %{ /* invalid embedded code */ %}
 
